syntax = "proto3";

package proto;

option go_package = "/proto";

service CurrencyConverterService {
    rpc Convert (CurrencyConverterRequest) returns (CurrencyConverterResponse);
}
  
message CurrencyConverterRequest {
    float amount = 1;
    string initialCurrency = 2;
    string finalCurrency = 3;
}

message CurrencyConverterResponse {
    float amount = 1;
}
